<resources>
    <string name="app_name">YouOnlyLiveOnce</string>
    <string name="action_settings">Settings</string>

    <string name="button_config_ok">OK</string>


    <string name="button_unit_start">Start</string>
    <string name="button_unit_back">Back</string>
    <string name="button_unit_skip">Skip</string>
    <string name="workoutCore">Core</string>
    <string name="workoutStetch">Stretches</string>
    <string name="workout20min">20 minutes</string>
    <string name="workout10min">10 minutes</string>
    <string name="workout15min">15 minutes</string>
    <string name="exercise_list">Exercise List</string>
    <string name="totalLength">Total Length (ca.)</string>
    <string name="minutes">Minutes</string>
    <string name="warmUp1ShortRep">WarmUp 1 Rep</string>
    <string name="xletixBarbwireBattleWorkout">Xletix BarbwireBattle Workout</string>
    <string name="warmUp2Reps">WarmUp 2Reps</string>
    <string name="powerPipeWorkout">PowerPipe Workout</string>
    <string name="coolDown">CoolDown</string>
    <string name="slipperySlopeWorkout">Slippery Slope Workout</string>
    <string name="insaneInvertWorkout">Insane Invert Workout</string>
    <string name="instableIslandsWorkout">Instable Islands Workout</string>
    <string name="tripleTraumaWorkout">Triple Trauma Workout</string>
    <string name="button_training_l">L</string>
    <string name="button_training_m">M</string>
    <string name="ausdauer">Ausdauer</string>
    <string name="barbwireBattleWorkout">Barbwire Battle</string>
    <string name="button_training_s">S</string>
    <string name="workouts">Workouts</string>
    <string name="workout">Workout</string>
    <string name="trainingsplan">Trainingsplan</string>
    <string name="trainingsplan_s">Trainingsplan S</string>
    <string name="trainingsplan_m">Trainingsplan M</string>
    <string name="trainingsplan_l">Trainingsplan L</string>
    <string name="xletix">Xletix</string>
    <string name="timer_start">Start</string>
    <string name="timer_0">0:00</string>
    <string name="timer_resume">Resume</string>
    <string name="timer_pause">Pause</string>
    <string name="musik">Musik</string>
    <string name="labelYouTubeLink">YouTube Link</string>
    <string name="update">Update</string>
    <string name="titleSettings">Settings</string>
    <string name="settings">Settings</string>
    <string name="finished">Finished</string>
    <string name="paused">Paused</string>
    <string name="meditation">Meditation</string>
</resources>
