<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/lay_init_screen"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yolo.xletix.Act_InitialScreen"
    android:orientation="vertical"
    android:background="@color/imageBlue"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workouts"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:id="@+id/lay_workout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <!--<ImageView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:scaleType="fitXY"-->
        <!--android:src="@drawable/silhouette_main"/>-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:text="@string/trainingsplan"/>
    <TableRow
        android:id="@+id/table_row_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <android.support.design.button.MaterialButton
            android:id="@+id/button_training_s"
            android:text="@string/button_training_s"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1" />
        <android.support.design.button.MaterialButton
            android:id="@+id/button_training_m"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:text="@string/button_training_m" />
        <android.support.design.button.MaterialButton
            android:id="@+id/button_training_l"
            android:text="@string/button_training_l"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1" />
    </TableRow>
    <android.support.design.button.MaterialButton
        android:id="@+id/button_ausdauer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/ausdauer"/>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/label_musik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/musik"/>
        <android.support.design.button.MaterialButton
            android:id="@+id/button_youtube_workout"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_musik"
            android:layout_marginEnd="5dp"
            app:icon="@drawable/icons8_youtube_30dp"
            app:iconSize="20dp"
            android:text="@string/workout"
            app:iconTint="@null"
            android:layout_marginTop="15dp"/>
        <android.support.design.button.MaterialButton
            android:id="@+id/button_youtube"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/button_youtube_workout"
            app:layout_constraintStart_toEndOf="@+id/button_youtube_workout"
            android:layout_marginStart="10dp"
            app:icon="@drawable/icons8_youtube_30dp"
            app:iconSize="20dp"
            app:iconTint="@null"
            android:layout_gravity="end"/>
    </android.support.constraint.ConstraintLayout>
    <!-- iconTint null makes colours visible -->
</LinearLayout>